@@ -37,6 +37,9 @@ Deprecated and removed features, and other changes affecting compatibility:
   named uint8_t, uint16_t, etc. from <stdint.h>.  There is no standardized
   replacement for register_t.
 
+* The obsolete functions bcmp, bcopy, bzero, index, and rindex are no
+  longer declared in <string.h>, only <strings.h>.
+
 Changes to build and runtime requirements:
 
 * GCC 6.2 or later is required to build the GNU C Library.
